--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -9,12 +9,21 @@
         <h5>phone: 080-</h5>
         <h5>address: Yokohama</h5>
 
-        <form class="" action="index.html" method="post">
-            <label>Your name:</label>
-            <input type="text" name="nameentry">
-            <br>
-            <label>Password:</label>
-            <input type="password" name="">
+        <form action="mailto:austin.w.atwood@gmail.com" method="post" enctype="text/plain">
+            <table>
+                <tr>
+                    <td><label>Your name:</label></td>
+                    <td><input type="text" name="nameentry"></td>
+                </tr>
+                <tr>
+                    <td><label>Your email:</label></td>
+                    <td><input type="email" name="emailentry"></td>
+                </tr>
+                <tr>
+                    <td><label>Your message</label></td>
+                    <td><textarea name="messageentry" rows="10" cols="22"></textarea></td>
+                </tr>
+            </table><br>
             <input type="submit" name="">
         </form>
         <hr>
