200218 - couldn't get partial borders on table cells... but did some other things I guess.

--- a/HTML - Personal Site/cities.html
+++ b/HTML - Personal Site/cities.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Cities</title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
         <h3>Places I've lived</h3>
