--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Austin's... fourth site?</title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
         <h1>Austin</h1>
-        <p><em>Father of a beautiful <strong>baby</strong> boy!</em></p>
+        <p><em>Father of a beautiful <strong>baby boy!</strong></em></p>
         <hr>
         <a href="likes.html">Things I like</a><br>
         <a href="cities.html">Places I've lived</a><br>
