--- a/HTML - Personal Site/skills.html
+++ b/HTML - Personal Site/skills.html
@@ -2,68 +2,69 @@
 <html>
     <head>
         <title>Skills</title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
         <meta charset="utf-8">
     </head>
     <body>
         <h3>Skills</h3>
         <hr>
-        <table cellpadding='10'>
+        <table class="skillstable">
             <tr>
                 <td><table><thead>
                     <tr>
-                        <th>Languages</th>
+                        <th class="skillgroup">Languages</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>English</td>
-                        <td>⭐⭐⭐⭐⭐</td>
+                        <td class="skill">English</td>
+                        <td class="rating">⭐⭐⭐⭐⭐</td>
                     </tr>
-                    <tr>
-                        <td>Japanese</td>
-                        <td>⭐⭐⭐⭐⭐</td>
+                    <tr class="nottop">
+                        <td class="skill">Japanese</td>
+                        <td class="rating">⭐⭐⭐⭐⭐</td>
                     </tr>
-                    <tr>
-                        <td>Korean</td>
-                        <td>⭐⭐⭐</td>
+                    <tr class="nottop">
+                        <td class="skill">Korean</td>
+                        <td class="rating">⭐⭐⭐</td>
                     </tr>
                 </tbody></table></td>
                 <td><table><thead>
                     <tr>
-                        <th>Programming</th>
+                        <th class="skillgroup">Programming</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Python</td>
-                        <td>⭐⭐⭐</td>
+                        <td class="skill">Python</td>
+                        <td class="rating">⭐⭐⭐</td>
                     </tr>
-                    <tr>
-                        <td>HTML</td>
-                        <td>⭐</td>
+                    <tr class="nottop">
+                        <td class="skill">HTML</td>
+                        <td class="rating">⭐⭐</td>
                     </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>⭐</td>
+                    <tr class="nottop">
+                        <td class="skill">JavaScript</td>
+                        <td class="rating">⭐</td>
                     </tr>
                 </tbody></table></td>
                 <td><table><thead>
                     <tr>
-                        <th>Operations</th>
+                        <th class="skillgroup">Operations</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>AWS</td>
-                        <td>⭐⭐⭐⭐</td>
+                        <td class="skill">AWS</td>
+                        <td class="rating">⭐⭐⭐⭐</td>
                     </tr>
-                    <tr>
-                        <td>Ansible</td>
-                        <td>⭐⭐</td>
+                    <tr class="nottop">
+                        <td class="skill">Ansible</td>
+                        <td class="rating">⭐⭐</td>
                     </tr>
-                    <tr>
-                        <td>JIRA</td>
-                        <td>⭐⭐⭐</td>
+                    <tr class="nottop">
+                        <td class="skill">JIRA</td>
+                        <td class="rating">⭐⭐⭐</td>
                     </tr>
                 </tbody></table></td>
             </tr>
