--- a/HTML - Personal Site/likes.html
+++ b/HTML - Personal Site/likes.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>My favorite things</title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
         <h3>Things I like</h3>
