good enough for the second version of my page! nothing too complicated, but looks decent!

--- a/CSS - My Site/images/Austin Atwood.html
+++ b/CSS - My Site/images/Austin Atwood.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<!-- saved from url=(0094)file:///G:/My%20Drive/Nustinian/web-development-bootcamp-course/CSS%20-%20My%20Site/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Austin Atwood</title>
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
-        <link rel="icon" href="favicon.ico">
-        <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
-    <meta charset="utf-8"></head>
+        <link rel="stylesheet" type="text/css" href="./Austin Atwood_files/styles.css">
+        <link rel="icon" href="file:///G:/My%20Drive/Nustinian/web-development-bootcamp-course/CSS%20-%20My%20Site/favicon.ico">
+        <link href="./Austin Atwood_files/css" rel="stylesheet">
+    </head>
     <body>
         <div class="container">
             <div class="self-introduction">
-            <img class="cloud1" src="images/cloud.png">
+            <img class="cloud1" src="./Austin Atwood_files/cloud.png">
                 <h1>I'm Austin</h1>
                 <h2 class="gram">a wannabe-grammer.</h2>
                 <h6>(that is, not yet "pro")</h6>
-            <img class="cloud2" src="images/cloud.png">
+            <img class="cloud2" src="./Austin Atwood_files/cloud.png">
             </div>
-            <img class="mountain" src="images/mountain.png">
+            <img class="mountain" src="./Austin Atwood_files/mountain.png">
         </div>
         <div class="middle-container">
             <div class="profile">
-                <img class="profilepic" src="https://image.flaticon.com/icons/svg/138/138661.svg" alt="Icon made by Smashicons from www.flaticon.com">
+                <img class="profilepic" src="./Austin Atwood_files/138661.svg" alt="Icon made by Smashicons from www.flaticon.com">
                 <h2>Hello.</h2>
                 <p><em> I'm Austin, the father of a beautiful <strong>baby boy!</strong></em></p>
             </div>
-            <hr class="hr1">
+            <hr>
             <div class="skills">
                 <h2>My Skills.</h2>
-                <div class="skill-row1">
-                    <img class="langpic" src="https://image.flaticon.com/icons/svg/1372/1372756.svg" alt="Icon made by Freepik from www.flaticon.com">
+                <div class="skill-row">
+                    <img class="skillpic" src="./Austin Atwood_files/1372756.svg" alt="Icon made by Freepik from www.flaticon.com">
                     <h3>Languages</h3>
                     <p>I am fluent in Japanese. Thanks Asako!</p>
                     <p>I am also proficient in Korean, although I am honestly a bit out of practice.</p>
                     <p>If only I spent more time learning Chinese.</p>
                 </div>
-                <div class="skill-row2">
-                    <img class="itpic" src="https://image.flaticon.com/icons/svg/403/403560.svg" alt="Icon made by Alfredo Hernandez from www.flaticon.com">
+                <div class="skill-row">
+                    <img class="skillpic" src="./Austin Atwood_files/403560.svg" alt="Icon made by Alfredo Hernandez from www.flaticon.com">
                     <h3>IT</h3>
                     <p>I currently work as an operations engineer, using applications such as Ansible, Jenkins, and Zabbix to manage AWS resources for a multinational company's EC site.</p>
                     <p>I only started in IT in September 2019, but I have been studying security, programming, and Kubernetes, and have already attained certifications such as the CISSP and the CKA.</p>
                 </div>
             </div>
-            <hr class="hr2">
+            <hr>
             <div class="contact-me">
                 <h2>Get In Touch</h2>
                 <h3>Contact me if you want to... yeah, if you want to. That's where that sentence should end.</h3>
-                <p class="contactmsg">Like I said above, I'm still just an aspiring programmer. Watch out for me in a year or two, though!</p>
-                <a href="mailto: austin.w.atwood@gmail.com" class="myButton">CONTACT ME</a>
+                <p>Like I said above, I'm still just an aspiring programmer. Watch out for me in a year or two, though!</p>
+                <a class="btn" href="mailto:austin.w.atwood@gmail.com">CONTACT ME</a>
             </div>
         </div>
         <div class="bottom-container">
-            <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-            <a class="footer-link" href="https://twitter.com/">Twitter</a>
+            <a class="footer-link" href="https://www.linkedin.com/">Don't have a LinkedIn</a>
+            <a class="footer-link" href="https://twitter.com/">Don't have Twitter</a>
             <a class="footer-link" href="https://github.com/Nustinian">GitHub</a>
-            <p class="footer">© 2020 Austin Atwood.</p>
+            <p>© 2020 Austin Atwood.</p>
         </div>
-    </body>
-</html>
+    
+</body></html>
