added start button for mobile. awesome!

--- a/simon/index.html
+++ b/simon/index.html
@@ -9,30 +9,30 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press any key to start</h1>
   <div class="container">
     <div lass="row">
 
-      <div type="button" id="green" class="btn green">
+      <div type="button" id="green" class="btn green game-button">
 
       </div>
 
-      <div type="button" id="red" class="btn red">
+      <div type="button" id="red" class="btn red game-button">
 
       </div>
     </div>
 
     <div class="row">
 
-      <div type="button" id="yellow" class="btn yellow">
+      <div type="button" id="yellow" class="btn yellow game-button">
 
       </div>
-      <div type="button" id="blue" class="btn blue">
+      <div type="button" id="blue" class="btn blue game-button">
 
       </div>
 
     </div>
-
+  <div type="button" class="btn start-button">Start</div>
   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
